--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -1,60 +1,122 @@
 {% load static %}
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--Css Style -->
-    <link rel="stylesheet" href="{% static 'users/css/main.css' %}" type="text/css">
+    <link
+      rel="stylesheet"
+      href="{% static 'users/css/main.css' %}"
+      type="text/css"
+    />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      crossorigin="anonymous"
+    />
     <!--Font Link-->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Open+Sans:wght@800&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Open+Sans:wght@800&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body id="bg" style="background-image: url({% static 'images/bg.png' %});">
-  {% load static %}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark edit" id="main-navbar">
-        <div class="container">
-          <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/rna-s.png' %}" alt="" ></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <form class="d-flex" id="authstyle">
-            {% if user.is_authenticated %}
-              <a href="{% url 'profile' %}" class="btn" style="color: white; background-color: #fd5e14;"type="submit" id="header-links"> Profile </a>
-              <a href="{% url 'logout' %}" class="btn" style="color: white; background-color: #fd5e14;"type="submit" id="header-links"> Logout </a>
-    
-            {% else %}
-              <a href="{% url 'register' %}" class="btn" style="color: white; background-color: #fd5e14;"type="submit" id="header-links"> Create Account </a>
-              <a href="{% url 'login' %}" class="btn" style="color: white; background-color: #fd5e14; margin-left: 10px; "type="submit" id="header-links">Log In</a>
-            {% endif %}
-            </form>
-        </div>
+  <body id="bg" style="background-image: url({%static 'images/bg.png'%})">
+    {% load static %}
+    <nav
+      class="navbar navbar-expand-lg navbar-dark bg-dark edit"
+      id="main-navbar"
+    >
+      <div class="container">
+        <a class="navbar-brand" href="{% url 'home' %}"
+          ><img src="{% static 'images/rna-s.png' %}" alt=""
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <form class="d-flex" id="authstyle">
+          {% if user.is_authenticated %}
+          <a
+            href="{% url 'profile' %}"
+            class="btn"
+            style="color: white; background-color: #fd5e14"
+            type="submit"
+            id="header-links"
+          >
+            Profile
+          </a>
+          <a
+            href="{% url 'logout' %}"
+            class="btn"
+            style="color: white; background-color: #fd5e14"
+            type="submit"
+            id="header-links"
+          >
+            Logout
+          </a>
+            <script
+            data-jsd-embedded
+            data-key="7d6d5667-cf84-4158-a969-4adb20361754"
+            data-base-url="https://jsd-widget.atlassian.com"
+            src="https://jsd-widget.atlassian.com/assets/embed.js"
+
+          ></script>
+          {% else %}
+          <a
+            href="{% url 'register' %}"
+            class="btn"
+            style="color: white; background-color: #fd5e14"
+            type="submit"
+            id="header-links"
+          >
+            Create Account
+          </a>
+          <a
+            href="{% url 'login' %}"
+            class="btn"
+            style="color: white; background-color: #fd5e14; margin-left: 10px"
+            type="submit"
+            id="header-links"
+            >Log In</a
+          >
+          {% endif %}
+        </form>
+      </div>
     </nav>
 
-      <div>
-        <div class="container">
-          {% if messages %}
-          {% for message in messages %}
-            <div class="alert alert-{{message.tags}}">{{message}}</div>
-          {% endfor %}
-        {% endif %}
-        </div>
-        {% block content %}
-        {% endblock content %}
+    <div>
+      <div class="container">
+        {% if messages %} {% for message in messages %}
+        <div class="alert alert-{{message.tags}}">{{message}}</div>
+        {% endfor %} {% endif %}
       </div>
+      {% block content %} {% endblock content %}
+    </div>
 
-      <!-- Optional JavaScript; choose one of the two! -->
+    <!-- Optional JavaScript; choose one of the two! -->
 
-      <!-- Option 1: Bootstrap Bundle with Popper -->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+      crossorigin="anonymous"
+    ></script>
 
-      <!-- Option 2: Separate Popper and Bootstrap JS -->
-      <!--
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
       -->
